# xvector_jtubespeech

./: .gitignore  README.md  __init__.py  hubconf.py  interface.py  pyproject.toml  requirements.txt
test/: test.py
usage/: main.py
xvector_jtubespeech/: __init__.py
xvector_jtubespeech/network/: tdnn.py  xvector.py
